--- a/Website TPS/contact.html
+++ b/Website TPS/contact.html
@@ -21,45 +21,37 @@
   </nav>
 </head>
 <body>
-	<div class="banner"></div>
-	<ul class="list-unstyled">
+  <div class="banner"></div>
+		<ul class="list-unstyled">
   <li class="media">
-    <img class="mr-3" src="images/labkimia.jpeg" alt="Generic placeholder image" width="10%">
+    <img class="mr-3" src="images/01.png" alt="Generic placeholder image" width="10%">
     <div class="media-body">
-      <h5 class="mt-0 mb-1">LABOR KIMIA PRODI TPS</h5>
-      KETERANGAN:
+      <h5 class="mt-0 mb-1">INSTAGRAM</h5>
+      @himatps_poltekkampar
     </div>
   </li>
   <li class="media my-4">
-    <img class="mr-3" src="images/pabrikolahlimbah.jpeg" alt="Generic placeholder image" width="10%">
+    <img class="mr-3" src="images/02.png" alt="Generic placeholder image" width="10%">
     <div class="media-body">
-      <h5 class="mt-0 mb-1">Pabrik Olah Limbah</h5>
-      KETERANGAN:
+      <h5 class="mt-0 mb-1">ALAMAT</h5>
+      <p>Jl. Tengku Muhammad KM.2, Batu Belah</p>
+      <p>Kec. Bangkinang</p>
+      <p>Kab. Kampar</p>
+      <p>Kab. Riau</p>
     </div>
   </li>
   <li class="media">
-    <img class="mr-3" src="images/preparasi.jpeg" alt="Generic placeholder image" width="10%">
+    <img class="mr-3" src="images/04.png" alt="Generic placeholder image" width="10%">
     <div class="media-body">
-      <h5 class="mt-0 mb-1">ruang preparasi</h5>
-      KETERANGAN:
-    </div>
-  </li>
-  <li class="media my-4">
-    <img class="mr-3" src="images/ujimineral.jpeg" alt="Generic placeholder image" width="10%">
-    <div class="media-body">
-      <h5 class="mt-0 mb-1">ruang uji mineral</h5>
-      KETERANGAN:
-    </div>
-  </li>
-  <li class="media">
-    <img class="mr-3" src="images/green house.jpeg" alt="Generic placeholder image" width="10%">
-    <div class="media-body">
-      <h5 class="mt-0 mb-1">Green House</h5>
-      KETERANGAN:
+      <h5 class="mt-0 mb-1">No. Telpon</h5>
+      0852-1129-0621
     </div>
   </li>
 </ul>
-<div class="row">
+	
+	<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15958.999286282471!2d101.0462292!3d0.33574!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb41facf686ab859c!2sPoliteknik%20Kampar!5e0!3m2!1sen!2sid!4v1634787849542!5m2!1sen!2sid" width="600" height="450" style="border:2;" allowfullscreen="" loading="lazy"></iframe>
+
+  <div class="row">
       <div class="col-sm-12 bg-success" style="height: 10vh">
         <h5>   Copyright by Fajar Farhan Samosir</h5>
         <p>  Tugas Desain Grafis</p>
