--- a/Website TPS/fasilitas.html
+++ b/Website TPS/fasilitas.html
@@ -1,32 +1,69 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>TPS</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+  <title></title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+  <nav>
+  <div class="fixed-nav">
+    <div class="header">
+      <h2><img src="images/POLKAM.png" width="5%">  Politeknik Kampar - Teknik Pengolahan Sawit <img src="images/tps.png" width="5%"></h2>
+    </div>
+    <div class="topnav">
+      <a href="beranda.html"> Beranda </a>
+      <center><a href="dosen.html"> Dosen </a></center>
+      <center><a href="kurikulum.html"> Kurikulum </a></center>
+      <center><a href="fasilitas.html"> Fasilitas </a></center>
+      <center><a href="galeri.html"> Galeri </a></center>
+      <center><a href="contact.html"> Kontak </a></center>
+    </div>
+  </div>
+  </nav>
 </head>
 <body>
-	<nav>
-	<div class="fixed-nav">
-		<div class="header">
-			<h2><img src="images/POLKAM.png" width="5%">  Politeknik Kampar - Teknik Pengolahan Sawit <img src="images/tps.png" width="5%"></h2>
-		</div>
-		<div class="topnav">
-			<a href="#"> Beranda </a>
-			<center><a href="#"> Dosen </a></center>
-			<center><a href="#"> Kurikulum </a></center>
-			<center><a href="#"> Fasilitas </a></center>
-			<center><a href="#"> Galeri </a></center>
-			<center><a href="#"> Kontak </a></center>
-		</div>
-		<div>
-			
-            <h1>fasilitas fasilitas</h1>
-			<p>labor</p>
-            <p>mini plant</p>
-            <p>coica</p>
-		</div>
-	</div>
-	</nav>
+	<div class="banner"></div>
+	<ul class="list-unstyled">
+  <li class="media">
+    <img class="mr-3" src="images/labkimia.jpeg" alt="Generic placeholder image" width="10%">
+    <div class="media-body">
+      <h5 class="mt-0 mb-1">LABOR KIMIA PRODI TPS</h5>
+      KETERANGAN:
+    </div>
+  </li>
+  <li class="media my-4">
+    <img class="mr-3" src="images/pabrikolahlimbah.jpeg" alt="Generic placeholder image" width="10%">
+    <div class="media-body">
+      <h5 class="mt-0 mb-1">Pabrik Olah Limbah</h5>
+      KETERANGAN:
+    </div>
+  </li>
+  <li class="media">
+    <img class="mr-3" src="images/preparasi.jpeg" alt="Generic placeholder image" width="10%">
+    <div class="media-body">
+      <h5 class="mt-0 mb-1">ruang preparasi</h5>
+      KETERANGAN:
+    </div>
+  </li>
+  <li class="media my-4">
+    <img class="mr-3" src="images/ujimineral.jpeg" alt="Generic placeholder image" width="10%">
+    <div class="media-body">
+      <h5 class="mt-0 mb-1">ruang uji mineral</h5>
+      KETERANGAN:
+    </div>
+  </li>
+  <li class="media">
+    <img class="mr-3" src="images/green house.jpeg" alt="Generic placeholder image" width="10%">
+    <div class="media-body">
+      <h5 class="mt-0 mb-1">Green House</h5>
+      KETERANGAN:
+    </div>
+  </li>
+</ul>
+<div class="row">
+      <div class="col-sm-12 bg-success" style="height: 10vh">
+        <h5>   Copyright by Fajar Farhan Samosir</h5>
+        <p>  Tugas Desain Grafis</p>
+      </div>
+    </div>
 </body>
 </html>
