--- a/kontak.html
+++ b/kontak.html
@@ -12,7 +12,7 @@
 				<h2><img src="images/POLKAM.png" width="5%">  Politeknik Kampar - Teknik Pengolahan Sawit <img src="images/tps.png" width="5%"></h2>
 			</div>
 			<div class="topnav">
-				<a href="#"> Beranda </a>
+				<a href="beranda.html"> Beranda </a>
 				<center><a href="dosen.html"> Dosen </a></center>
 			<center><a href="kurikulum.html"> Kurikulum </a></center>
 			<center><a href="fasilitas.html"> Fasilitas </a></center>
@@ -33,17 +33,17 @@
 				<div class="col-sm">
 					<img src="images/03.png" width="25%">
 					<h5>Instagram</h5>
-					<p style="font-size: 9px">@himatps_poltekkampar</p>
+					<p>@himatps_poltekkampar</p>
 				</div>
 				<div class="col-sm">
 					<img src="images/Rumah.png" width="40%">
 					<h5>Alamat</h5>
-					<p style="font-size: 9px">Jl. Tengku Muhammad KM.2, Batu Belah <br>Kec. Bangkinang <br>Kab. Kampar <br>Riau</p>
+					<p>Jl. Tengku Muhammad KM.2, Batu Belah <br>Kec. Bangkinang, Kab. Kampar, Riau</p>
 				</div>
 				<div class="col-sm">
 					<img src="images/telepon.png" width="25%">
 					<h5>Telepon</h5>
-					<p style="font-size: 9px">0852-1129-0621</p>
+					<p>0852-1129-0621</p>
 				</div>
 			</div>
 		</div>
