--- a/dosen.html
+++ b/dosen.html
@@ -13,22 +13,16 @@
         </div>
         <div class="topnav">
           <a href="beranda.html"> Beranda </a>
-          <center><a href="dosen.html"> Dosen </a></center>
-          <center><a href="kurikulum.html"> Kurikulum </a></center>
-          <center><a href="fasilitas.html"> Fasilitas </a></center>
-          <center><a href="galeri.html"> Galeri </a></center>
-          <center><a href="contact.html"> Kontak </a></center>
+      <center><a href="dosen.html"> Dosen </a></center>
+      <center><a href="kurikulum.html"> Kurikulum </a></center>
+      <center><a href="fasilitas.html"> Fasilitas </a></center>
+      <center><a href="galeri.html"> Galeri </a></center>
+      <center><a href="kontak.html"> Kontak </a></center>
         </div>
       </div>
       </nav>
 
     <style>
-      .img_card{
-        border-radius: 10px;
-        -webkit-box-shadow: -2px 6px 6px 3px rgba(0,0,0,0.75);
-        -moz-box-shadow: -2px 6px 6px 3px rgba(0,0,0,0.75);
-        box-shadow: -2px 6px 6px 3px rgba(0,0,0,0.75);
-      }
       .p1{
         font-weight: lighter;
         color: gray;
@@ -141,7 +135,7 @@
 <center>
   <div class="row">
       <div class="col-sm-12 bg-success" style="height: 8vh">
-        <h5> © Desi Nurfitriani</h5>
+        <h5> © Desi Nurfitrian</h5>
         <p2>Tugas Desain Grafis</p2>
       </div>
   </div>
