--- a/Kurikulum.html
+++ b/Kurikulum.html
@@ -17,7 +17,7 @@
         <center><a href="kurikulum.html"> Kurikulum </a></center>
         <center><a href="fasilitas.html"> Fasilitas </a></center>
         <center><a href="galeri.html"> Galeri </a></center>
-        <center><a href="kontact.html"> Kontak </a></center>
+        <center><a href="kontak.html"> Kontak </a></center>
       </div>
     </div>
   </nav>
