--- a/fasilitas.html
+++ b/fasilitas.html
@@ -94,7 +94,8 @@
            <img src="images/lab_mikrobilogi.jpg" width="730" height="430" class="img-fluid img_card" alt="" >
         </td>
         <td>
-         <h5>Tempat Praktek Mahasiswa TPS</h5>
+         <h5>Ruang Praktikum TPS</h5>
+         <p>Laboratorium tempat Mahasiswa TPS untuk melakukan praktikum.</p>
         </td>
         <td></td>
         <td>
