--- a/beranda.html
+++ b/beranda.html
@@ -15,10 +15,15 @@
 			<center><a href="kurikulum.html"> Kurikulum </a></center>
 			<center><a href="fasilitas.html"> Fasilitas </a></center>
 			<center><a href="galeri.html"> Galeri </a></center>
-			<center><a href="contact.html"> Kontak </a></center>
+			<center><a href="kontak.html"> Kontak </a></center>
 		</div>
 	</div>
 	</nav>
+  <style>
+    .font{
+font-size: 21px;
+    }
+  </style>
 </head>
 <body>
 	<div class="banner"></div>
@@ -29,35 +34,43 @@
     </thead>
     <tbody>
       <tr>
-      	<center><h1> Profil </h1></center>
+       <center> <img src="images/spanduk_tps.jpg" width="100%"></center>
+      	<center><h1 class="bannersatu"> Profil </h1></center>
       </tr>
       <tr>
+        <div class="font">
       	<center><p>Program studi D3 Teknik Pengolahan Sawit merupakan suatu program studi yang mampu menghasilkan lulusan yang berdisiplin dan berkarakter serta mempunyai kompetensi yang menguasai keterampilan dan ilmu terapan pada bidang hulu dan hilir industri sawit.</p></center>
+      </div>
       </tr>
 
       <tr>
-      	<center><h1> Visi </h1></center>
+      	<center><h1 class="bannersatu"> Visi </h1></center>
       </tr>
       <tr>
+        <div class="  font">
       	<center><p>“TerwujudnyaProgram Studi Teknik Pengolahan Sawit yang Unggul, Inovatif dan Terkemuka Berbasis Teknologi Terapan pada Tahun 2032”</p></center>
+      </div>
       </tr>
 
       <tr>
-      	<center><h1> Misi </h1></center>
+      	<center><h1 class="bannersatu"> Misi </h1></center>
       </tr>
       <tr>
+        <div class=" font">
       		<ol type="1">
                <li> Menyelenggarakan Pendidikan vokasional di bidang Teknik Pengolahan Sawit untuk mencetak tenaga kerja yang berkulitas</li>
                <li>Mengembangkan teknologi terapan melalui penelitian untuk mendukung perkembangan industri, khususnya industri sawit</li>
                <li>Berperan aktif memecahkan permasalahan masyarakat melalui pengabdian kepada masyarakat.</li>
                <li>Menjalin kolaborasi dengan dunia usaha dan industri untuk menghadapi persaingan global.</li>
             </ol>
+          </div>
       </tr>
 
       <tr>
-      	<center><h1> Keahlian Mahasiswa Teknik Pengolahan Sawit </h1></center>
+      	<center><h1 class="bannersatu"> Keahlian Mahasiswa Teknik Pengolahan Sawit </h1></center>
       </tr>
       <tr>
+        <div class="font">
       	<ol type="1">
                <li>Mampu dalam melaksanakan kegiatan usaha dan proses pembibitan sawit secara baik</li>
                <li>Mampu dalam pengoperasian dan perawatan rutin serta kinerja proses produksi pada peralatan utama dan pendukung di industri proses kimia khususnya di bidang Teknik pengolahan sawit</li>
@@ -65,6 +78,7 @@
                <li>Mampu dalam menggunakan teknologi terkini yang dapat memberikan nilai tambah.</li>
 
             </ol>
+          </div>
       </tr>
     </tbody>
     </table>
